fixed paragraph alignment in style.css

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ div img {
     display: block;
 }
 
-.about-me p {
-    width: 60%;
+div.about-me p {
+    width: 500px;
+    margin: auto;
 }
